--- a/Basic_HTML_Website.html
+++ b/Basic_HTML_Website.html
@@ -5,82 +5,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Basic HTML Website</title>
+    <link rel="stylesheet" href="../Personal Portfolio/Personal Portpolio.css">
 </head>
 
 <body>
-    <header>
-        <span>your name</span>
-        <nav>
-            <li>Home</li>
-            <li>Projects</li>
-            <li>Articles</li>
-            <li>Contact</li>
-        </nav>
-        <h1>Frontend Developer</h1>
-        <p>html only with proper layout, no styling</p>
+    <header class="main-header">
+        <div class="header-wrapper">
+            <div class="logo-wrapper">
+                <img src="https://via.placeholder.com/50" alt="Logo" class="logo-image">
+                <span class="logo-text">your name</span>
+            </div>
+            <nav class="main-nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Articles</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="hero-content">
+            <h1 class="hero-title">Frontend Developer</h1>
+            <p class="hero-subtitle">html only with proper layout, no styling</p>
+        </div>
     </header>
 
-    <main>
-        <section>
-            <div>
-                <h2>Projects</h2>
-                <ul>
-                    <li>HTML Only Portfoilio</li>
-                    <li>Calculator</li>
-                    <li>Quiz App</li>
-                    <li>Countdown Timer</li>
-                    <li>Product Upcoming Page</li>
-                </ul>
+    <main class="main-content">
+        <section class="projects-section">
+            <h2 class="section-title">Projects</h2>
+            <ul class="projects-list">
+                <li class="project-item">HTML Only Portfoilio</li>
+                <li class="project-item">Calculator</li>
+                <li class="project-item">Quiz App</li>
+                <li class="project-item">Countdown Timer</li>
+                <li class="project-item">Product Upcoming Page</li>
+            </ul>
+        </section>
+
+        <section class="experience-section">
+            <h2 class="section-title">Work Experience</h2>
+            <div class="experience-item">
+                <h3 class="experience-title">roadmap.sh</h3>
+                <p class="experience-description">Solved all the fronted projects</p>
+                <a href="#" class="experience-link">Visit my Profile</a>
             </div>
 
-            <div>
-                <h2>Work Experience</h2>
-                <h3>roadmap.sh</h3>
-                <p>Solved all the fronted projects</p>
-                <a href="#">Visit my Profile</a>
-
-                <h3>OpenSource Work</h3>
-                <p>Contributed to 50pensource projects. Made my own projects with 200 GitHub Stars.</p>
-                <a href="#">Visit my GitHub Profile</a>
-            </div>
-            <div>
-                <h2>Education</h2>
-                <p>Graduated with 3.76 out of 4 CGPA. Won Acme Hackathon. Organized 30 sessions.</p>
-                <h3>Course I took:</h3>
-                <ul>
-                    <li>Object Oriented Programming</li>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Web Engineering</li>
-                    <li>Artificial Intelligence</li>
-                    <li>Human Computer Interaction</li>
-                    <li>Computer Graphics</li>
-                    <li>Databas Management System</li>
-                    <li>Distributed Database System</li>
-                    <li>Discreet Mathematics</li>
-                </ul>
+            <div class="opensource-item">
+                <h3 class="experience-title">OpenSource Work</h3>
+                <p class="experience-description">Contributed to 50pensource projects. Made my own projects with 200 GitHub Stars.</p>
+                <a href="#" class="experience-link">Visit my GitHub Profile</a>
             </div>
         </section>
-        <section>
-            <h2>Reviews from my Teachers</h2>
-            <div>
-                <p>John doe was a brilliant student; always stood out with his assignments.</p>
-                <span>Jane Doe</span>
-                <span>Assistant Professor</span>
-            </div>
-            <div>
-                <p>John doe was a brilliant student; always stood out with his assignments.</p>
-                <span>Jane Doe</span>
-                <span>Assistant Professor</span>
-            </div>
-            <div>
-                <p>John doe was a brilliant student; always stood out with his assignments.</p>
-                <span>Jane Doe</span>
-                <span>Assistant Professor</span>
+
+        <section class="education-section">
+            <h2 class="section-title">Education</h2>
+            <p class="education-description">Graduated with 3.76 out of 4 CGPA. Won Acme Hackathon. Organized 30 sessions.</p>
+            <h3 class="course-title">Course I took:</h3>
+            <ul class="course-list">
+                <li class="course-item">Object Oriented Programming</li>
+                <li class="course-item">Data Structures and Algorithms</li>
+                <li class="course-item">Web Engineering</li>
+                <li class="course-item">Artificial Intelligence</li>
+                <li class="course-item">Human Computer Interaction</li>
+                <li class="course-item">Computer Graphics</li>
+                <li class="course-item">Databas Management System</li>
+                <li class="course-item">Distributed Database System</li>
+                <li class="course-item">Discreet Mathematics</li>
+            </ul>
+        </section>
+
+        <section class="reviews-section">
+            <h2 class="section-title">Reviews from my Teachers</h2>
+            <div class="reviews-wrapper">
+                <div class="review-item">
+                    <p class="review-text">John doe was a brilliant student; always stood out with his assignments.</p>
+                    <span class="reviewer-name">Jane Doe</span>
+                    <span class="reviewer-title">Assistant Professor</span>
+                </div>
+                <div class="review-item">
+                    <p class="review-text">John doe was a brilliant student; always stood out with his assignments.</p>
+                    <span class="reviewer-name">Jane Doe</span>
+                    <span class="reviewer-title">Assistant Professor</span>
+                </div>
+                <div class="review-item">
+                    <p class="review-text">John doe was a brilliant student; always stood out with his assignments.</p>
+                    <span class="reviewer-name">Jane Doe</span>
+                    <span class="reviewer-title">Assistant Professor</span>
+                </div>
             </div>
         </section>
     </main>
-    <footer>
-        <p>&copy; all rights reserved 2025</p>
+    <footer class="main-footer">
+        <p class="copyright">&copy; all rights reserved 2025</p>
     </footer>
 </body>
 
